--- a/_sass/carousel.scss
+++ b/_sass/carousel.scss
@@ -143,7 +143,7 @@ html, body {
   .drawer {
     position: relative;
     margin: 0 auto 30px auto;
-    padding: 30px 30px;
+    padding: 30px 30px 0px 30px;
     background-color: $blue-color;
     border: 2px solid $yellow-color;
     box-shadow: 0 0 20px rgba(0, 0, 0, 1);
@@ -161,8 +161,24 @@ html, body {
       opacity: 1;
     }
 
-    .drawer-content {
+    .content {
       margin: 0 auto;
+    }
+
+    .buttons {
+
+      padding-bottom: 30px;
+
+      a { position: relative;
+          top: 13px;
+          padding: 0px 15px 0 0;
+          color: $yellow-color;
+          text-decoration: none;
+        }
+      a:hover, a:active {
+                 color: $orange-color;
+               }
+
     }
   }
 }
